[gd_scene load_steps=3 format=3 uid="uid://p46rby3d6qhj"]

[ext_resource type="Script" path="res://scripts/encounter/card_interface/card_hand_interface.gd" id="1_iljyn"]
[ext_resource type="PackedScene" uid="uid://b8sbk48j0lfst" path="res://scenes/encounter/card_interface/card_slot.tscn" id="2_eteuo"]

[node name="CardHandInterface" type="MarginContainer"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1250.0
offset_top = -202.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 3
mouse_filter = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5
script = ExtResource("1_iljyn")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 25

[node name="CardGrid" type="HBoxContainer" parent="MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2
alignment = 1

[node name="CardSlot" parent="MarginContainer/CardGrid" instance=ExtResource("2_eteuo")]
layout_mode = 2

[node name="CardSlot2" parent="MarginContainer/CardGrid" instance=ExtResource("2_eteuo")]
layout_mode = 2

[node name="CardSlot3" parent="MarginContainer/CardGrid" instance=ExtResource("2_eteuo")]
layout_mode = 2
